Version 1.0.8, 01/01/2005
	1. implement configuration average radiative transitions. including
	   energy shift and width of the UTAs.
	2. configuration average transitions for all other processes.
	3. update CRM module for UTA model.
	4. enable CI within the same non-relativisitc configuration for UTA.
	
Version 1.0.7, 11/10/2004
	1. add DR satellite energy to the DB_DR file.
	2. add the RRMultipole function for bound-free multipole matrix
	   elements.
	3. rewrite Angular coupling routines, much faster now.
	4. DB_TR file now stores the multipole matrix elements, instead of gf
	   values. The ASCII mode text file also has an additional column
	   giving the matrix elements.
	5. Binary output for rmatrix module.
	
Version 1.0.6, 09/05/2004
	1. parallelize StructureMBPT
	2. use subplx in RefineRadial.
	3. using relativistic Bethe formula for extrapolation of excitation.
	4. add an option for all plane-wave collision strength output.
	5. save the slater Y potential.
	6. improve RadialRydberg, use Dirac Coulomb for asymptotic.
	7. add an option to printout partial-wave collision strength.
	8. implement a Dirac R-matrix method.
	
Version 1.0.5, 05/30/2004
	1. implement magnetic sublevel ionization
	2. fix bugs in radial integration.
	3. replace PS manual with PDF format.
	4. implement a version of 2nd order MBPT for energy.
	5. fix the problem in Uheling potential.
	6. StructureMBPT, better implementation of MBPT
	7. allow the number of grid points to be changed.
	
Version 1.0.4, 02/10/2004
	1. make DRStrength a bit more efficient.
	2. enable the LMn inner-shell Auger extrapolation.
	3. make all atomic symbols capitalized.
	4. ReinitConfig resets the closed shells to empty.
	5. add MaxPower electron energy distribution, Maxwellian+Powerlaw.
	6. reading file for inner-shell Auger extrapolation.
	7. determine base level in structure.
	8. reimplementation of MULTI array.
	9. ensure that the wavefunction nodes are correct for high-n states.