@@ -3144,7 +3144,7 @@ strengths on this grid are output. It is forced to be same as that set by
 Set the flag for configuration average models. If $m=1$, all calculations are
 carried out in the configuration average approximation. The radiative
 transition rates output contains three additional fields, the energy shift,
-gauusian standard deviation, and the correction to the line strengths due to
+gausian standard deviation, and the correction to the line strengths due to
 the configuration interaction within the same non-relativisitc
 configurations. If $m=0$, which is the default,
 the usual detailed term accounting method is used. This function should be
